<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:extended="http://schemas.android.com/apk/res-auto"
    android:title="@string/device_settings_app_name">

    <PreferenceCategory
			android:key="battery"
            android:title="@string/battery_title">

        <com.cyanogenmod.settings.device.BlxPreference
            android:key="blx_state"
            android:title="@string/blx_title"
            android:dialogTitle="@string/blx_title" />

		<SwitchPreference
			android:key="fastcharge_state"
			android:title="@string/fastcharge_title"
			android:summary="@string/fastcharge_summary" />

    </PreferenceCategory>

    <PreferenceCategory
			android:key="filesystem"
            android:title="@string/filesystem_title">

		<SwitchPreference
			android:key="fsync_state"
			android:title="@string/fsync_title"
			android:summary="@string/fsync_summary" />

		<SwitchPreference
			android:key="dynamic_fsync_state"
			android:title="@string/dynamic_fsync_title"
			android:summary="@string/dynamic_fsync_summary" />

    </PreferenceCategory>

    <PreferenceCategory
			android:key="cluster_plug"
            android:title="@string/cluster_plug_title">

		<SwitchPreference
			android:key="cluster_plug_active_state"
			android:title="@string/cluster_plug_active_title"
			android:summary="@string/cluster_plug_active_summary" />

		<SwitchPreference
			android:key="cluster_plug_low_power_mode_state"
			android:title="@string/cluster_plug_low_power_mode_title"
			android:summary="@string/cluster_plug_low_power_mode_summary" />
			
		<SwitchPreference
			android:key="cluster_plug_screen_off_power_mode_state"
			android:title="@string/cluster_plug_screen_off_power_mode_title"
			android:summary="@string/cluster_plug_screen_off_power_mode_summary" />

		<com.cyanogenmod.settings.device.preferences.SeekBarProgressPreference
			android:key="cluster_plug_sampling_time_state"
			android:title="@string/cluster_plug_sampling_time_title"
			android:summary="@string/cluster_plug_sampling_time_summary"
			android:max="1000" />

		<com.cyanogenmod.settings.device.preferences.SeekBarProgressPreference
			android:key="cluster_plug_load_threshold_up_state"
			android:title="@string/cluster_plug_load_threshold_up_title"
			android:summary="@string/cluster_plug_load_threshold_up_summary"
			android:max="100" />

		<com.cyanogenmod.settings.device.preferences.SeekBarProgressPreference
			android:key="cluster_plug_load_threshold_down_state"
			android:title="@string/cluster_plug_load_threshold_down_title"
			android:summary="@string/cluster_plug_load_threshold_down_summary"
			android:max="100" />

		<com.cyanogenmod.settings.device.preferences.SeekBarProgressPreference
			android:key="cluster_plug_vote_threshold_up_state"
			android:title="@string/cluster_plug_vote_threshold_up_title"
			android:summary="@string/cluster_plug_vote_threshold_up_summary"
			android:max="99" />

		<com.cyanogenmod.settings.device.preferences.SeekBarProgressPreference
			android:key="cluster_plug_vote_threshold_down_state"
			android:title="@string/cluster_plug_vote_threshold_down_title"
			android:summary="@string/cluster_plug_vote_threshold_down_summary"
			android:max="99" />

		<com.cyanogenmod.settings.device.preferences.SeekBarProgressPreference
			android:key="cluster_plug_max_cores_screenoff_state"
			android:title="@string/cluster_plug_max_cores_screenoff_title"
			android:summary="@string/cluster_plug_max_cores_screenoff_summary"
			extended:base="1"
			android:max="4" />

    </PreferenceCategory>

</PreferenceScreen>
